# virtual-insanity

./: .gitignore  README.md  pixi.toml  pyproject.toml
notebooks/: chunk_index_demo_local.ipynb  coords.json  dhdt_40km_tile_sliderule.ipynb  project_result_harmony.ipynb
src/virtual_insanity/: SUBSET.md  main.py  parameters.py  subset.py
