[project]
name = "virtual-insanity"
requires-python = ">= 3.12"
version = "0.1.0"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-64"]

[tool.pixi.pypi-dependencies]
virtual_insanity = { path = ".", editable = true }

[tool.pixi.tasks]
subset = "src/virtual_insanity/main.py"

[tool.pixi.dependencies]
earthaccess = ">=0.14.0,<0.15"
h5py = ">=3.14.0,<4"
s3fs = ">=2025.7.0,<2026"
fsspec = ">=2025.7.0,<2026"
geopandas = ">=1.1.1,<2"
pyarrow = ">=21.0.0"
